Initial structure made

--- a/index.html
+++ b/index.html
@@ -3,9 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Recipe</title>
 </head>
 <body>
-    
+    <header>
+        <div class="upper-panel">
+            <p>What are we cooking today?</p>
+        </div>
+    </header>
+    <div class="main-section">
+        <div class="input-output">
+            <div class="input-box">
+                <p>What ingredients do we have today?</p>
+                <input type="text" class="input">
+            </div>
+            <div class="output-box">
+                <p>Suggested Dishes</p>
+                <input type="text" class="ouput">
+            </div>
+        </div>
+
+        <div class="food-pic">
+            <p>Let's cook Something!</p>
+            <div class="box1 box">
+                <div class="food" style="background-image: url('food1.jpg');"></div>
+            </div>
+            <div class="box2 box">
+                <div class="food" style="background-image: url('food2.jpeg');"></div>
+            </div>
+            <div class="box3 box">
+                <div class="food" style="background-image: url('food3.jpeg');"></div>
+            </div>
+
+        </div>
+        <div class="ingredient-name">
+
+        </div>
+    </div>
 </body>
 </html>
